Fixes double vertical scroll
X scrollbar causes a second Y scrollbar to appear.

--- a/styles/opened-files.less
+++ b/styles/opened-files.less
@@ -71,7 +71,6 @@ ul.tab-bar>li.tab.of-highlight:after {
       &.list-nested-item {
         .list-tree.entries {
           max-height: 25vh;
-          overflow: auto;
         }
       }
     }
